Improve email so it doesn't end up in spam

--- a/templates/emails/recover_password.pug
+++ b/templates/emails/recover_password.pug
@@ -1,7 +1,8 @@
-h2 Hola, #{.name}
-h4 Has solicitado recuperar tu contraseña
-p Para recuperar tu contraseña haz click en el enlace de abajo y te dejará establecer una nueva
-p Si no has sido tu quien lo ha solicitado puedes ignorar este mensaje 
-a(href=`{{.BASE_URL}}/recover-password?token={{.token}}`) Haz click aquí
-p Si el botón no funciona copia y pega lo siguiente en tu navegador
-code #{.BASE_URL}/recover-password?token=#{.token}
+html
+  h2 Hola, #{.name}
+  h4 Has solicitado recuperar tu contraseña
+  p Para recuperar tu contraseña haz click en el enlace de abajo y te dejará establecer una nueva
+  p Si no has sido tu quien lo ha solicitado puedes ignorar este mensaje 
+  a(href=`{{.BASE_URL}}/recover-password?token={{.token}}`) Haz click aquí
+  p Si el botón no funciona copia y pega lo siguiente en tu navegador
+  code #{.BASE_URL}/recover-password?token=#{.token}
