--- a/templates/emails/validate_email.pug
+++ b/templates/emails/validate_email.pug
@@ -1,5 +1,6 @@
-h2 Hola, #{.name}
-p Empieza tu búqueda
-a(href=`{{.BASE_URL}}/validate-email?token={{.token}}`) Haz click aquí
-p Si el botón no funciona copia y pega lo siguiente en tu navegador
-code #{.BASE_URL}/validate-email?token=#{.token}
+html
+  h2 Hola, #{.name}
+  p Empieza tu búqueda
+  a(href=`{{.BASE_URL}}/validate-email?token={{.token}}`) Haz click aquí
+  p Si el botón no funciona copia y pega lo siguiente en tu navegador
+  code #{.BASE_URL}/validate-email?token=#{.token}
