Implement password recovery

--- a/templates/emails/recover_password.pug
+++ b/templates/emails/recover_password.pug
@@ -18,11 +18,11 @@ html(lang="es" xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microso
       td(style="height: 16px")
     tr
       td(align="center" style="height: 48px")
-        a(style="font-size: 24px; text-decoration: none; font-weight: bold; padding: 16px 128px; color: #d3bb7c; background-color: #362016; border-radius: 16px;" href=`{{.BASE_URL}}/recover-password?token={{.token}}`) Haz click aquí
+        a(style="font-size: 24px; text-decoration: none; font-weight: bold; padding: 16px 128px; color: #d3bb7c; background-color: #362016; border-radius: 16px;" href=`{{.BASE_URL}}/recover-password/redeem?token={{.token}}`) Haz click aquí
     tr
       td(style="height: 16px")
     tr
       td(align="center" style="font-size: 12px") Si el botón no funciona copia y pega lo siguiente en tu navegador
     tr
       td
-        p(style="font-size: 12px; background-color: #d3bb7c; padding: 16px; border-radius: 16px") #{.BASE_URL}/recover-password?token=#{.token}
+        p(style="font-size: 12px; background-color: #d3bb7c; padding: 16px; border-radius: 16px") #{.BASE_URL}/recover-password/redeem?token=#{.token}
