--- a/templates/emails/validate_email.pug
+++ b/templates/emails/validate_email.pug
@@ -25,4 +25,4 @@ html(lang="es" xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microso
       td(align="center" style="font-size: 12px") Si el botón no funciona copia y pega lo siguiente en tu navegador
     tr
       td
-        p(style="font-size: 12px; background-color: #d3bb7c; padding: 16px; border-radius: 16px") #{.BASE_URL}/recover-password?token=#{.token}
+        p(style="font-size: 12px; background-color: #d3bb7c; padding: 16px; border-radius: 16px") #{.BASE_URL}/validate-email?token=#{.token}
